tester/log
In file included from test.cpp:78:0:
sys.c: In function ‘int main(int, char**)’:
sys.c:268:25: error: ‘SYS_accept’ was not declared in this scope
 sys_n2v["SYS_accept"] = SYS_accept;
                         ^~~~~~~~~~
sys.c:270:29: error: ‘SYS_arch_prctl’ was not declared in this scope
 sys_n2v["SYS_arch_prctl"] = SYS_arch_prctl;
                             ^~~~~~~~~~~~~~
sys.c:273:32: error: ‘SYS_epoll_ctl_old’ was not declared in this scope
 sys_n2v["SYS_epoll_ctl_old"] = SYS_epoll_ctl_old;
                                ^~~~~~~~~~~~~~~~~
sys.c:274:33: error: ‘SYS_epoll_wait_old’ was not declared in this scope
 sys_n2v["SYS_epoll_wait_old"] = SYS_epoll_wait_old;
                                 ^~~~~~~~~~~~~~~~~~
sys.c:279:25: error: ‘SYS_msgctl’ was not declared in this scope
 sys_n2v["SYS_msgctl"] = SYS_msgctl;
                         ^~~~~~~~~~
sys.c:280:25: error: ‘SYS_msgget’ was not declared in this scope
 sys_n2v["SYS_msgget"] = SYS_msgget;
                         ^~~~~~~~~~
sys.c:281:25: error: ‘SYS_msgrcv’ was not declared in this scope
 sys_n2v["SYS_msgrcv"] = SYS_msgrcv;
                         ^~~~~~~~~~
sys.c:282:25: error: ‘SYS_msgsnd’ was not declared in this scope
 sys_n2v["SYS_msgsnd"] = SYS_msgsnd;
                         ^~~~~~~~~~
sys.c:283:29: error: ‘SYS_newfstatat’ was not declared in this scope
 sys_n2v["SYS_newfstatat"] = SYS_newfstatat;
                             ^~~~~~~~~~~~~~
sys.c:286:27: error: ‘SYS_security’ was not declared in this scope
 sys_n2v["SYS_security"] = SYS_security;
                           ^~~~~~~~~~~~
sys.c:287:25: error: ‘SYS_semctl’ was not declared in this scope
 sys_n2v["SYS_semctl"] = SYS_semctl;
                         ^~~~~~~~~~
sys.c:288:25: error: ‘SYS_semget’ was not declared in this scope
 sys_n2v["SYS_semget"] = SYS_semget;
                         ^~~~~~~~~~
sys.c:289:24: error: ‘SYS_semop’ was not declared in this scope
 sys_n2v["SYS_semop"] = SYS_semop;
                        ^~~~~~~~~
sys.c:290:29: error: ‘SYS_semtimedop’ was not declared in this scope
 sys_n2v["SYS_semtimedop"] = SYS_semtimedop;
                             ^~~~~~~~~~~~~~
sys.c:294:24: error: ‘SYS_shmat’ was not declared in this scope
 sys_n2v["SYS_shmat"] = SYS_shmat;
                        ^~~~~~~~~
sys.c:295:25: error: ‘SYS_shmctl’ was not declared in this scope
 sys_n2v["SYS_shmctl"] = SYS_shmctl;
                         ^~~~~~~~~~
sys.c:296:24: error: ‘SYS_shmdt’ was not declared in this scope
 sys_n2v["SYS_shmdt"] = SYS_shmdt;
                        ^~~~~~~~~
sys.c:297:25: error: ‘SYS_shmget’ was not declared in this scope
 sys_n2v["SYS_shmget"] = SYS_shmget;
                         ^~~~~~~~~~
sys.c:301:26: error: ‘SYS_tuxcall’ was not declared in this scope
 sys_n2v["SYS_tuxcall"] = SYS_tuxcall;
                          ^~~~~~~~~~~
test.cpp:246:57: error: ‘ORIG_RAX’ was not declared in this scope
           orig_eax = ptrace(PTRACE_PEEKUSER, child, 8 * ORIG_RAX, NULL);
                                                         ^~~~~~~~
test.cpp:279:65: error: ‘RAX’ was not declared in this scope
               child_wrote += ptrace(PTRACE_PEEKUSER, child, 8 * RAX, NULL);
                                                                 ^~~
test.cpp:296:37: error: ‘struct user_regs_struct’ has no member named ‘rcx’; did you mean ‘ecx’?
               long int flags = regs.rcx & 3;
                                     ^~~
